@@ -1,3 +1,7 @@
+2022-02-01  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* src/printf.c: Fix potential buffer overflow
+
 2022-01-24  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/ntoa.h: Add func "kernaux_itoa"
